--- a/res/skins/LateNight/style.qss
+++ b/res/skins/LateNight/style.qss
@@ -66,7 +66,7 @@
   qproperty-layoutAlignment: 'AlignLeft | AlignTop';
   border-bottom: 1px solid #585858;
   background-color: #1e1e1e;
-  padding: 2px;
+  padding: 2px 0px 0px 2px;
 }
 
 #DeckRowTwoThreeFour {
@@ -342,7 +342,7 @@
 
 #DeckButtons {
   qproperty-layoutAlignment: 'AlignBottom';
-  padding: 3px;
+  padding: 3px 1px 1px 3px;
 }
 
 #ColumnTwo {
